--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
         <module>cli</module>
         <module>maven</module>
         <module>maven-example</module>
+        <module>gradle</module>
     </modules>
 
     <groupId>org.openapitools.openapidiff</groupId>
